# Sapi-Rust-2

./: Cargo.toml  README.md
benches/: dm_1.rs  mod.rs  my_benchmark.rs
notes/: arrow tab polish.txt  changes.txt  cmd.txt  design.txt  issues.txt  notations.txt  plan-1.txt  plan-2.txt  tasks.txt
proptest-regressions/tests/: select_test.txt
src/: lib.rs  main.rs
src/compilation/: compilation.rs  mod.rs
src/compilation/data/: ast.rs  mod.rs  model.rs  semantic.rs  token.rs
src/compilation/pipeline/: analyzer.rs  generator.rs  insert_analyzer.rs  lexer.rs  mod.rs  parser.rs  select_analyzer.rs  step_test.rs
src/tests/: dm_1.rs  mod.rs  nova_dm.rs  nova_select_test.rs  select_test.rs
src/tools/: arena.rs  debug_macros.rs  err.rs  mod.rs
src/tools/_unused/: _arena_old.rs  _gen_array.rs  _id.rs  _idx.rs  _idx_.rs  _memory_pool.rs  _restricted_array.rs  _scratch.rs
