[package]
name = "sapi"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
codegen-units = 1

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# rand = "0.8.5" # must be version 0.8.5 for compatibility with other packages

[dependencies]
# bumpalo = { version = "3.17.0", features = ["collections", "boxed"] } #, "serde"] }
sqlparser = { version = "0.55.0"} #, features = [ "serde" ] } # aren't using serde anyhow
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
allocator-api2 = "0.2.21" # "0.3.0" causes errors. Its not compatible with hashbrown.
hashbrown = "0.15.3" # allocation friendly HashMap
# string-alloc = "0.0.3" # allocation friendly String
extend = "1.2.0" # provides syntactic sugar for extension trait
tokio = { version = "1.45", features = ["full"] }
# sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8.5", features = [
    "postgres", "sqlite", 
    # "json", "rust_decimal", "migrate", "chrono", "derive",
    "runtime-tokio", "tls-rustls-ring-native-roots"
    ] }
# soa-rs = "=0.8.1"
proptest = "1.6.0"